Adding note taker blog

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,8 @@
   <meta property="og:site_name" content="Prateek Sharma">
   <meta property="og:title" content="Projects">
   <meta property="og:description" content="Video Translator : A tool to transcribe and translate video subtitles into multiple languages using AI models and open source libraries.
-Audio Cloning : An extension of the video-translator tool that generates cloned audio for short subtitles, improving the quality of audio output.">
+Audio Cloning : An extension of the video-translator tool that generates cloned audio for short subtitles, improving the quality of audio output.
+TTS Study Assistant : A productivity tool that lets users save, organize, and listen to notes from any website using a Chrome extension.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -180,6 +181,10 @@ Audio Cloning : An extension of the video-translator tool that generates cloned 
 <li>
 <p><a href="/projects/audio-cloning"><em><strong>Audio Cloning</strong></em></a>
 : An extension of the video-translator tool that generates cloned audio for short subtitles, improving the quality of audio output.</p>
+</li>
+<li>
+<p><a href="/projects/tts-study-assistant"><em><strong>TTS Study Assistant</strong></em></a>
+: A productivity tool that lets users save, organize, and listen to notes from any website using a Chrome extension.</p>
 </li>
 </ul>
 
