Fixing links in tts study assistant blog

--- a/projects/tts-study-assistant/index.html
+++ b/projects/tts-study-assistant/index.html
@@ -638,8 +638,8 @@ Example to generate SHA-256 hash in TypeScript:</li>
   <a class="anchor" href="#links">#</a>
 </h2>
 <ul>
-<li><a href="git@github.com:pratts/tts-study-assistant.git">GitHub Repository</a></li>
-<li><a href="www.tidylnk.com/1RucaU">Chrome Web Store Listing</a></li>
+<li><a href="https://github.com/pratts/tts-study-assistant.git">GitHub Repository</a></li>
+<li><a href="https://www.tidylnk.com/1RucaU">Chrome Web Store Listing</a></li>
 <li><a href="https://tts-study-assistant.vercel.app/">Admin Panel</a></li>
 </ul>
 <h2 class="heading" id="feedback">
